<resources>
    <string name="activity_browse_label">Browse screens</string>
    <string name="activity_sd_browser_label">Select a comic from your SD card</string>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_credits_label">Credits</string>
    <string name="main_recent_items">OPEN RECENT</string>
    <string name="main_recent_items_empty">No recent files.\nTap the logo to start.</string>
    <string name="main_intro">Press <b>Menu</b> or fling up to start</string>
    <string name="item_navigate_title">Go to…</string>
    <string name="item_navigate_shortcut">G</string>
    <string name="item_first_title">First Page</string>
    <string name="item_previous_title">Previous Page</string>
    <string name="item_next_title">Next Page</string>
    <string name="item_previous_screen_title">Previous Screen</string>
    <string name="item_next_screen_title">Next Screen</string>
    <string name="item_last_title">Last Page</string>
    <string name="item_zoom_title">Zoom</string>
    <string name="item_zoom_in_title">Zoom In</string>
    <string name="item_zoom_out_title">Zoom Out</string>
    <string name="item_fit_width_title">Fit Width</string>
    <string name="item_fit_height_title">Fit Height</string>
    <string name="item_actual_size">Actual Size</string>
    <string name="item_toggle_page_layout_title">Toggle 2-Page Layout</string>
    <string name="item_rotate_title">Rotate</string>
    <string name="item_browse_title">Page Browser…</string>
    <string name="item_set_as_title">Set as</string>
    <string name="item_open_title">Open File…</string>
    <string name="item_take_photo">Take Photo…</string>
    <string name="item_settings_title">Settings…</string>
    <string name="menu_close_title">Close</string>
    <string name="dialog_no_sd_title">Warning</string>
    <string name="dialog_no_sd_text">No SD card was found.\n\nPlease insert or mount your SD card to open comics.</string>
    <string name="dialog_page_progress_title">Loading&#8230;</string>
    <string name="dialog_page_progress_text">Loading screen @number. Please wait&#8230;</string>
    <string name="dialog_loading_progress_title">Loading&#8230;</string>
    <string name="dialog_loading_progress_text">Loading comic archive from SD card.</string>
    <string name="dialog_load_error_title">Oops!</string>
    <string name="dialog_load_error_text">An error has occurred while loading.</string>
    <string name="dialog_page_error_title">Oops!</string>
    <string name="dialog_page_error_text">Unable to load image. This generally happens because of an out of memory error.\n\nFor CBR/RAR files, try extracting into a folder and open the folder with a long tap.\n\nFor the rest, closing OCR Manga Reader and trying again after a while might help.</string>
    <string name="dialog_flip_controls_title">Flip controls?</string>
    <string name="dialog_flip_controls_text">Flip navigation controls to adapt them to current reading direction?</string>
    <string name="dialog_unavailable_title">App unavailable</string>
    <string name="sd_browser_back">Back to parent folder</string>
    <string name="sd_browser_empty">Empty folder</string>
    <string name="sd_browser_open">OPEN</string>
    <string name="sd_browser_recent">RECENT</string>
    <string name="screen_browser_go">Go</string>
	<string name="sd_browser_storage">Storage</string>
    <string name="category_controls_title">Controls</string>
    <string name="preference_map_actions_title">Custom controls</string>
    <string name="preference_map_actions_summary">Set the action of each control event</string>
    <string name="preference_single_tap_title">Single tap</string>
    <string name="preference_double_tap_title">Double tap</string>
    <string name="preference_long_tap_title">Long press</string>
    <string name="preference_trackball_up_title">Trackball up</string>
    <string name="preference_trackball_down_title">Trackball down</string>
    <string name="preference_trackball_left_title">Trackball left</string>
    <string name="preference_trackball_right_title">Trackball right</string>
    <string name="preference_trackball_center_title">Trackball center</string>
    <string name="preference_fling_up_title">Fling up</string>
    <string name="preference_fling_down_title">Fling down</string>
    <string name="preference_fling_left_title">Fling left</string>
    <string name="preference_fling_right_title">Fling right</string>
    <string name="preference_corner_bottom_left_title">Bottom left corner tap</string>
    <string name="preference_corner_bottom_right_title">Bottom right corner tap</string>
    <string name="preference_corner_top_left_title">Top left corner tap</string>
    <string name="preference_corner_top_right_title">Top right corner tap</string>
    <string name="preference_edge_left_title">Left edge tap</string>
    <string name="preference_edge_right_title">Right edge tap</string>
    <string name="preference_edge_top_title">Top edge tap</string>
    <string name="preference_edge_bottom_title">Bottom edge tap</string>
    <string name="preference_back_title">Back</string>
    <string name="preference_volume_up_title">Volume up</string>
    <string name="preference_volume_down_title">Volume down</string>
    <string name="preference_control_defaults_title">Restore defaults</string>
    <string name="preference_control_defaults_summary">Reset action settings to default values</string>
    <string name="preference_direction_title">Reading direction</string>
    <string name="preference_direction_summary">Choose between left-to-right or right-to-left</string>
    <string name="preference_auto_rotate_title">Auto-rotate</string>
    <string name="preference_auto_rotate_summary">Rotate image when phone orientation changes</string>
    <string name="category_visual_title">Visual</string>
    <string name="preference_transition_mode_title">Transition mode</string>
    <string name="preference_transition_mode_summary">Choose the animation for screen transitions</string>
    <string name="preference_scale_mode_title">Scale mode</string>
    <string name="preference_scale_mode_summary">Choose how images will be scaled on the screen</string>
    <string name="preference_show_number_title">Show screen number</string>
    <string name="preference_show_number_summary">Briefly shows the screen number in a corner</string>
    <string name="preference_invisible_corners_title">Invisible corners</string>
    <string name="preference_invisible_corners_summary">Make corner buttons invisible</string>
    <string name="preference_keep_screen_on_title">Keep Screen On</string>
    <string name="preference_keep_screen_on_summary">Prevent screen from turning off</string>
    <string name="preference_brigthness_title">Brightness</string>
    <string name="preference_brigthness_summary">Adjust screen brightness</string>
    <string name="preference_default_brightness">Default brightness</string>
    <string name="category_memory_title">History</string>
    <string name="preference_clear_history_title">Clear history</string>
    <string name="preference_clear_history_summary">Clear all viewing history</string>
    <string name="category_about_title">About</string>
    <string name="preference_acv_listing_title">Google Play listing</string>
    <string name="preference_version_title">Version</string>
    <string name="preference_version_summary">OCR Manga Reader v</string>
    <string name="preference_contact_title">Contact</string>
    <string name="preference_contact_summary">Email the developer</string>
    <string name="preference_visit_homepage_title">Visit homepage</string>
    <string name="preference_visit_homepage_summary">Visit the OCR Manga Reader homepage.</string>
    <string name="category_advanced_title">Advanced</string>
    <string name="preference_max_image_width_title">Max image width (0=auto)</string>
    <string name="preference_max_image_width_dialog_title">Max image width</string>
    <string name="preference_max_image_width_dialog_message">Set the maximum image width. Wider images will be downscaled. Set to 0 to let system decide.</string>
    <string name="preference_max_image_height_title">Max image height (0=auto)</string>
    <string name="preference_max_image_height_dialog_title">Max image height</string>
    <string name="preference_max_image_height_dialog_message">Set the maximum image height. Taller images will be downscaled. Set to 0 to let system decide.</string>
    <string name="preference_max_zoom_title">Max zoom factor</string>
    <string name="preference_max_zoom_dialog_title">Max zoom factor</string>
    <string name="preference_max_zoom_dialog_message">Set the maximum zoom factor.</string>
    <string name="preference_low_memory_title">Low memory mode</string>
    <string name="preference_low_memory_summary">Disable preloading and transitions</string>
    <string name="preference_zoom_step_title">Zoom increment</string>
    <string name="preference_zoom_step_dialog_title">Zoom increment</string>
    <string name="preference_zoom_step_dialog_message">Set amount to zoom by when a zoom action occurs (such as on a double-tap).</string>
    <string name="preference_scroll_step_title">Scroll amount</string>
    <string name="preference_scroll_step_dialog_title">Scroll amount</string>
    <string name="preference_scroll_step_dialog_message">Set amount to scroll for the scroll up/down action.</string>
    <string name="category_anki_title">Anki</string>
    <string name="preference_anki_deck_title">Deck</string>
    <string name="preference_anki_deck_summary">Select the deck to add Anki cards to.</string>
    <string name="preference_anki_model_title">Note type</string>
    <string name="preference_anki_model_summary">Select the type of note (card type) to use when creating Anki cards.</string>
    <string name="preference_anki_fields_title">Card field settings</string>
    <string name="preference_anki_fields_summary">Configure how dictionary entries are used to set Anki card fields.</string>
    <string name="preference_anki_fields_expression">Japanese Expression</string>
    <string name="preference_anki_fields_reading">Reading</string>
    <string name="preference_anki_fields_definition">Definition</string>
    <string name="preference_anki_fields_example_sentence">Example Sentence</string>
    <string name="preference_anki_fields_unused">Leave blank</string>
    <string name="preference_anki_confirm_send_title">Show card creation dialog</string>
    <string name="preference_anki_confirm_send_summary">Show an add/edit dialog before sending cards to Anki.</string>
    <string name="btn_ocr_send">Send</string>
    <string name="btn_ocr_diag_top_left">↖</string>
    <string name="btn_ocr_diag_bottom_right">↘</string>
    <string name="btn_ocr_up">↑</string>
    <string name="btn_ocr_down">↓</string>
    <string name="btn_ocr_left">←</string>
    <string name="btn_ocr_right">→</string>
    <string name="btn_ocr_lookup_next">▶</string>
    <string name="btn_ocr_lookup_prev">◀</string>
    <string name="btn_ocr_hide">Hide</string>
    <string name="btn_ocr_show">Show</string>
    <string name="btn_ocr_text_orientation_vertical">Vert</string>
    <string name="btn_ocr_text_orientation_horizontal">Horiz</string>
    <string name="btn_ocr_text_orientation_auto">Auto</string>
    <string name="btn_ocr_menu">Menu</string>
    <string name="btn_ocr_exit">Exit</string>
    <string name="ocr_view_start_msg">Tap or draw box around text to OCR</string>
    <string name="ocr_prefix"></string>
    <string name="ocr_no_results">No results</string>
    <string name="ocr_no_dict_entries">Not found in dictionary</string>
    <string name="ocr_load_assets_dialog_title">Copying OCR assets…</string>
    <string name="ocr_load_assets_dialog_msg">Please wait while OCR assets are copied to your SD card. This is only done once per app install/update.</string>
    <string name="ocr_prefs_title">OCR</string>
</resources>